# aoc22

./: .gitignore  aoc22.cabal  ghcid.sh  hie.yaml  runc.sh  runcpp.sh
c/: day1.c
cpp/: day1.cpp
haskell/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
rust/: day1.rs
